--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,159 @@
 
     <groupId>zhiguang.daily</groupId>
     <artifactId>accumulator</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>water</module>
+        <module>wellspring</module>
+        <module>brook</module>
+        <module>river</module>
+        <module>running</module>
+    </modules>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.0.RELEASE</version>
+    </parent>
+
+
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+        <!-- 编码 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- 公司Thrift服务 -->
+        <thrift.service.version>2.7.8</thrift.service.version>
+        <!-- 数据库连接池 -->
+        <druid.springboot.starter>1.1.9</druid.springboot.starter>
+        <!-- Gson处理Json -->
+        <gson.version>2.8.6</gson.version>
+        <!-- Guava -->
+        <guava.version>23.0</guava.version>
+        <!-- Hive Jdbc -->
+        <hive.jdbc.version>0.14.0</hive.jdbc.version>
+        <hadoop.version>2.6.0-mdh3.12.6-jre8</hadoop.version>
+        <!-- Mybatis -->
+        <mybatis.version>1.3.2</mybatis.version>
+        <!-- Mysql -->
+        <mysql.connector.version>5.1.45</mysql.connector.version>
+        <!-- Apache Poi -->
+        <poi.version>3.9</poi.version>
+        <!-- Scala -->
+        <scala.version>2.11.8</scala.version>
+        <!-- Utils -->
+        <commons.lang.version>3.7</commons.lang.version>
+        <!-- HttpClient -->
+        <httpclient.version>4.5.5</httpclient.version>
+        <lombok.version>1.16.20</lombok.version>
+        <!-- SAP Jdbc -->
+        <ngdbc.version>2.3.48</ngdbc.version>
+        <!-- LCS SDK-->
+        <lcs.version>2.0.27.1</lcs.version>
+        <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
+        <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
+        <maven.scala.plugin.version>2.15.2</maven.scala.plugin.version>
+        <jacoco.version>0.7.9</jacoco.version>
+        <redis.version>2.9.0</redis.version>
+        <quartz.version>2.3.0</quartz.version>
+
+        <dis.version>1.0.0</dis.version>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <includes>**/*.java</includes>
+        <main.class>Starter</main.class>
+    </properties>
+
+
+    <dependencies>
+        <!--spring boot 相关依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>1.2.2.RELEASE</version>
+        </dependency>
+        <!--redis-client-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${redis.version}</version>
+        </dependency>
+        <!-- lombok减少代码量-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+        <!-- Gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <!-- Utils -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang.version}</version>
+        </dependency>
+        <!-- HttpClient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
