--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>brook</module>
         <module>river</module>
         <module>running</module>
+        <module>common</module>
     </modules>
 
     <parent>
@@ -173,7 +174,12 @@
             <artifactId>quartz-jobs</artifactId>
             <version>2.3.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.54</version>
+        </dependency>
 
     </dependencies>
 
