--- a/running/pom.xml
+++ b/running/pom.xml
@@ -29,8 +29,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+        <groupId>zhiguang.daily</groupId>
+        <artifactId>wellspring</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>zhiguang.daily</groupId>
-            <artifactId>wellspring</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
