--- a/brook/pom.xml
+++ b/brook/pom.xml
@@ -11,5 +11,18 @@
 
     <artifactId>brook</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>zhiguang.daily</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.otter</groupId>
+            <artifactId>canal.client</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
