--- a/wellspring/pom.xml
+++ b/wellspring/pom.xml
@@ -11,5 +11,14 @@
 
     <artifactId>wellspring</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>zhiguang.daily</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
 
 </project>
